<resources>
    <string name="app_name">ProjectCuoiky</string>
    <string name="title_login">Đăng Nhập</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="forgot_password">Forgot password</string>
    <string name="btn_login">Đăng nhập</string>
    <string name="signup_prompt">Bạn chưa có tài khoản?</string>
    <string name="signup_link">Đăng ký</string>

    <string-array name="roles_array">
        <item>user</item>
        <item>admin</item>
    </string-array>
</resources>